<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jayhsugo.orderlunchbox.TotalAmountListFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_StoreName"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStoreName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_StorePhone"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStorePhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/text_StoreRequirement"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStoreRequirement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tvStatusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvStatusDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutTotalAmountList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/tvOrderItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/text_OrderItem"
                    android:textColor="@color/columnTitleText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvItemPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/text_ItemPrice"
                    android:textColor="@color/columnTitleText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvItemNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/text_ItemNumber"
                    android:textColor="@color/columnTitleText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMemberName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/text_MemberName"
                    android:textColor="@color/columnTitleText"
                    android:textSize="14sp" />


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_total_amount_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnRefresh" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/text_Total"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|right"
                android:text="@string/tvTotalAmount"
                android:textColor="@color/red"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvTotalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center"
                android:gravity="center|right"
                android:text="@string/tvTotalNumber"
                android:textColor="@color/blue"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
